compiling error fixed